# Final_Project_Proposal

./: .gitignore  CurateAI_Final_Project_Proposal.docx  CurateAI_MASTER_DEMO_REPORT (1).md  README.md  articles.csv  articles.json  pyproject.toml  rss_prototype.py
Enhancements_Prototype/: p1_cold_start_prototype.py  p2_2_llm_multilabel_prototype.py  p2_multilabel_classification_prototype.py  p3_enhanced_scoring_prototype.py
Enhancements_Prototype/Data/: full_corpus_multilabel.json  linkedin_profile.json  multilabel_classifications.json  p2_2_llm_classifications.json  p2_2_metrics.json  p3_enhanced_scoring_results.json  resume_profile.json
Prototypes/: article_extraction_prototype.py  classification_prototype.py  dedup_comparison_test.py  dedup_prototype.py  editor_agent_prototype.py  funnel_report_generator.py  newsletter_layout_prototype.py  personalization_prototype.py  pipeline_prototype.py  reddit_hn_prototype.py  rss_pagination_analyzer.py  rss_prototype.py  s3_opportunity_scoring_test.py  s4_content_brief_test.py  social_extraction_prototype.py  summarization_prototype.py  trend_detection_prototype.py  vector_dedup_test.py  vector_metrics_generator.py  wp_api_analyzer.py
Prototypes/Data/: articles.csv  articles.json  classified_top_20.json  content_strategy_briefs.json  dedup_funnel_metrics.csv  dedup_funnel_metrics.json  deduplicated_stories.csv  deduplicated_stories.json  editor_report_sample.json  (+21 more)
SEO_Prototype/: master_demo_pipeline (1).py  s1_authority_vector_test.py  s2_relevance_matching_test.py  s5_keyword_velocity_test.py  s6_master_dashboard_data.py
(+9 files in other folders)
